--- a/projecten.html
+++ b/projecten.html
@@ -78,8 +78,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <p><a href="">Responsive website voor pizzeria</a> (webontwikkeling 1)</p>
-            <p><a href="">Twuddyfinder</a> (projectweek 2015-2016)</p>
+            <p><a href="projecten\La Vecchia Napoli\index.html" target="_blank">Responsive website voor pizzeria</a> (webontwikkeling 1)</p>
+            <p><a href="projecten\Twuddyfinder\index.html" target="_blank">Twuddyfinder</a> (projectweek 2015-2016)<i> Werkt niet, enkel index-pagina wordt getoond.</i></p>
             <p><a href="">Jobfair2017 reservatiesysteem</a> (projectweek 2016-2017)</p>
           </div>
         </div>
