fix file name opleiden begeleiden.pptx

--- a/vaardigheden.html
+++ b/vaardigheden.html
@@ -359,7 +359,7 @@
                 </tr>
                 <tr>
                   <td colspan="5" class="licht"><p> Mijn niveau op het einde van het tweede jaar: Doorgroei niveau</p>
-                    <p>Bewijsstukken die dit aantonen: <a href="files/opleiden_begeleiden.pptx" target="_blank">Powerpoint opleiden begeleiden</a></p>
+                    <p>Bewijsstukken die dit aantonen: <a href="files/Opleiden begeleiden.pptx" target="_blank">Powerpoint opleiden begeleiden</a></p>
                   </td>
                 </tr>
               </table>
